# WikiInsight-Engine

./: .dvcignore  .gitignore  DOCKER_SETUP.md  Dockerfile  FUTURE_FEATURES.md  LICENSE  PIPELINE_STATUS.md  README.md  TROUBLESHOOTING.md  config.yaml  docker-compose.yml  dvc.yaml  env.example  mlflow.db  mlflow.db.backup  params.yaml  pipeline_logs.db  pipeline_logs.db-shm  pipeline_logs.db-wal  pyproject.toml  requirements.txt  run_app.cmd  run_app_production.cmd  run_tools.cmd
.github/workflows/: ci.yml
data/: pipeline_progress.json
data/entities/: wikidata_mappings.parquet
data/graph/: .gitignore
docker/: Dockerfile  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
infrastructure/: Dockerfile  README.md  docker-compose.yml  init-db.sql
notebooks/: README.md
ops/: run_app_production.cmd  run_dvc_tools.cmd  start_mlflow_ui.cmd
research/: wikidata_linker.py
scripts/: setup_nlp_resources.py  test_coronavirus_fetch.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_adaptive_clustering.py  test_api.py  test_api_graph_endpoints.py  test_api_rate_limiting.py  test_api_search.py  test_api_with_topic_index.py  test_build_graph.py  test_c_tfidf_keywords.py  test_checkpointing.py  test_clustering.py  test_clustering_metrics.py  test_database.py  test_database_comprehensive.py  test_embedding_map.py  test_fetch_wikipedia_data_async.py  test_frontend_backend_integration.py  test_gpu_clustering.py  test_gpu_utils.py  test_graph_builder.py  test_graph_comprehensive.py  test_graph_service.py  test_ingestion.py  test_knowledge_graph.py  test_mlflow_utils.py  test_nltk_utils.py  test_pipeline_101_articles.py  test_pipeline_endpoints.py  test_pipeline_integration.py  test_pipeline_orchestrator.py  test_pipeline_progress.py  test_pipeline_synthetic.py  test_preprocessing.py  test_retry_logic.py  test_search_engine_loading.py  test_stub_filtering.py  test_topic_index.py  test_wikidata_linker.py  test_wikipedia_client_async.py  (+1 more)
(+159 files in other folders)
